-------------------------------------------------------------------------------------------

---------------------------------------------------------------------------
CDI (Cloud Digital Interface) SDK Version 2.x.x - XX/XX/XXXX
---------------------------------------------------------------------------

What's New
------------

* Added internal reference count to Logger state data. NOTE: Each time CdiLoggerInitialize() is called,
  CdiLoggerShutdown() must be called once. The test applications have been updated to call CdiLoggerShutdown().

Bug Fixes
------------

* Fixed problems with multiple calls to CdiCoreInitialize(). See https://github.com/aws/aws-cdi-sdk/issues/34

---------------------------------------------------------------------------
CDI (Cloud Digital Interface) SDK Version 2.0.2 - 01/08/2021
---------------------------------------------------------------------------

What's New
------------

* Added initial version of the SDK coding style guide. See CODE_STYLE_GUIDE.md.
* Replaced CdiLoggerSetGlobalLog() API with new CdiLogGlobalGet() API, which returns the global log handle created
  via CdiCoreInitialize() API. The deprecated API did not serve any functional purpose.
* Added Windows targets for generating DLLs for the CDI-AWS SDK library. See use of Debug_DLL and Release_DLL in the
  Visual Studio solution and project files. Details at: https://github.com/aws/aws-cdi-sdk/pull/26
* Added use of the CDI_INTERFACE define to APIs that were not previously using it. Only affects the new Windows DLL
  targets.
* When using CdiOsMemAllocHugePage() API on Linux, the size of bytes allocated must be a multiple of
  HUGE_PAGES_BYTE_SIZE. See definition in cdi_os_api.h. If not, the memory will not be freed when using the
  CdiOsMemFreeHugePage() API.
* Renamed the queue type kQueueMultipleWriters to kQueueMultipleWritersFlag to clarify that the value is a flag,
  not an OS signal type. See include/cdi_queue_api.h.